2003-05-26  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Require intltool 0.26.
	
	* gtksourceview/gtksourcelanguage-private.h:
	* gtksourceview/gtksourcelanguage.c: Add support for translated
	.lang files.
	(process_language_node, parseTag): Prefer underscore-prefixed
	attribute names and get translations for their values.
	(language_file_parse): Check that the escape character is UTF-8
	valid.

	* gtksourceview/language-specs/c.lang: Prefix translatable
	attribute names with an underscore, so intltool-extract can pick
	the strings for translation.

	* gtksourceview/language-specs/language.dtd: Added
	"translation-domain" attribute to the language element.

	* autogen.sh: Enable documentation build by default.
	* HACKING: Added documentation policy for new API.
	
2003-05-25  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* configure.in: 
	* Makefile.am: Added reference documentation building
	infrastructure.

	* docs/Makefile.am:
	* docs/reference/Makefile.am:
	* docs/reference/gtksourceview-docs.sgml:
	* docs/reference/gtksourceview-overrides.txt:
	* docs/reference/gtksourceview-sections.txt:
	* docs/reference/gtksourceview.types: New files necessary to build
	the reference documentation

	* docs/reference/tmpl/*.sgml: Initial versions of documentation
	template files.

	* gtksourceview/gtksourcelanguagesmanager.h: Reformatted
	declarations so gtk-doc scanners can pick them up.
	* gtksourceview/gtksourcetagtable.c
	(gtk_source_tag_table_add_tags): Fixed typo in gtk-doc comment
	header.
	
2003-05-25  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Add Portuguese (pt) to ALL_LINGUAS.

2003-05-24  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/language-specs/ada.lang: 
	* gtksourceview/language-specs/c.lang: 
	* gtksourceview/language-specs/cpp.lang: Changed pattern for
	matching character constants (patch by Michael Terry, bug #113498)

	* gtksourceview/language-specs/desktop.lang: Added missing